// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ACTION CREATORS: FCM should create registration action 1`] = `
Object {
  "payload": Object {
    "token": "foobarbaz1234foobarfaz1234",
  },
  "type": "FCM/REGISTER_FCM_TOKEN",
}
`;

exports[`ACTION CREATORS: FCM should create registration failure action 1`] = `
Object {
  "payload": Object {
    "err": undefined,
  },
  "type": "FCM/REGISTER_FCM_TOKEN_ERRORED",
}
`;

exports[`ACTION CREATORS: FCM should create registration success action 1`] = `
Object {
  "type": "FCM/REGISTER_FCM_TOKEN_FULFILLED",
}
`;
